--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do Site</h1>
+            <h1>Curosos Gratis</h1>
         </header>
     </main>
 
     <article>
-        <h2>Artigo 001</h2>
-        <p>Texto Artigo 001</p>
+        <h2>Curso HTML5 E CSS3</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora optio voluptatum fugit libero doloremque vero laborum voluptatibus impedit, veniam vel! Cum totam laudantium veniam, expedita fugiat quis quos culpa officiis!</p>
     </article>
     <article>
-        <h2>Artigo 002</h2>
-        <p>Textp artigo 002</p>
+        <h2>Cruso de Javascript</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed corrupti ut, assumenda adipisci ratione sequi, ipsam facilis natus repellendus facere, nemo possimus est nostrum quam nulla blanditiis tenetur dolorem at?</p>
     </article>
 </body>
 </html>
